--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
     "modernizr": "~2.8.1",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "moment": "~2.10.2",
+    "moment-timezone": "~0.3.1"
   }
 }
